# Python-project

./: README.md  Table.py  launch.py  pyproject.toml  spore_analyzer2.py  spore_colab.py  statistics.py  test_funguy.py
